--- a/about.html
+++ b/about.html
@@ -37,20 +37,19 @@
 					<li class="nav-item">
 						<a class="nav-link" href="about.html">Bios</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="Contact.html">Portfolio</a>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="Contact.html" id="navbarDropdown" role="button" data-toggle="" aria-haspopup="true" aria-expand="false">Portfolio</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<a class="dropdown-item" href="creative_port.html">Creative Writing</a>
+							<a class="dropdown-item" href="creative_port.html">Computer Science(under constuction)</a>
+						</div>
+
 					</li>
 				</ul>
 			
 		</div>
 		</nav>
-		<nav class="navbar navbar-expand-md" role="navigation">
-			<!--LOGO-->
-			
-			<text class="navbar-text">Creative Writing Portfolio</text>
 		
-		</nav>
-
 		
 		<div class="background">
 			<div class="container team">
@@ -88,6 +87,7 @@
 			</div>
 			<div class="footer-copyright text-center">© 2022 Copyright: Evelyn Ryan</div>
 		</footer>		
+		<!--
 		<script
 		src="https://code.jquery.com/jquery-3.6.0.js"
 		integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
@@ -95,7 +95,7 @@
 		
 		<script src="C:\Users\white\Desktop\programming\Website\js\bootstrap.min.js"></script>
 		<script src="C:\Users\white\Desktop\programming\Website\js\main.js"></script>
-	
+		-->
 		
 	</body>
 </html>
