--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<a class="nav-link" href="about.html">Bios</a>
 					</li>
 					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="Contact.html" id="navbarDropdown" role="button" data-toggle="hover" aria-haspopup="true" aria-expand="false">Portfolio</a>
+						<a class="nav-link dropdown-toggle" href="Contact.html" id="navbarDropdown" role="button" data-toggle="" aria-haspopup="true" aria-expand="false">Portfolio</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 							<a class="dropdown-item" href="creative_port.html">Creative Writing</a>
 							<a class="dropdown-item" href="creative_port.html">Computer Science(under constuction)</a>
@@ -156,7 +156,7 @@
 		
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/main.js"></script>
-		
+		<!--
 		<div id="demo-modal" class="modal fade">
 			<div class="modal-dialog modal-lg modal-dialog-centered">
 				<div class="modal-content">
@@ -181,7 +181,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		
 	</body>
 </html>
