--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 					<div class="card col-lg-6 col-md-6 col-sm-12 txt-center">
 						<div class="card-body txt-center">
 							<h4 class="card-title">Evelyn Ryan</h4>
-							<p class="card-text">Evelyn Ryan is a creative writing and computer science specialist hoping to graduate from a Canadian university in the PNW. She is hoping to do some freelance work before her graduation. She is capable of web development and design, feature film writing, software engineering, and much more. </p>
+							<p class="card-text">Evelyn Ryan is a creative writing and computer science specialist soon to graduate from the University of Victoria. She is hoping to do some freelance work before her graduation. She is capable of web development and design, feature film writing, software engineering, and much more. </p>
 							<a class="btn btn-outline-secondary btn-lg" href="about.html">Read Bios </a>
 						</div>
 					</div>
